# floom-espidf

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
components/: CMakeLists.txt
components/main/: app_main.c
components/prboom/: d_deh.c  d_main.c  doomtype.h  g_game.c  gl_texture.c  info.c  m_cheat.c  m_cheat.h  p_ceilng.c  p_doors.c  p_enemy.c  p_enemy.h  p_floor.c  p_genlin.c  p_lights.c  p_mobj.c  p_plats.c  p_pspr.c  p_pspr.h  p_saveg.c  p_setup.c  p_spec.c  p_switch.c  p_telept.c  p_tick.c  p_user.c  r_data.c  r_demo.c  r_draw.c  r_fps.c  r_main.c  r_patch.c  r_plane.c  r_segs.c  r_things.c  s_sound.c  st_stuff.c  v_video.c  w_mmap.c  z_zone.c
components/prboom-esp32-compat/: i_main.c  i_sound.c  i_sound.c_orig  i_system.c  i_video.c  rgb_lcd.c  spi_lcd.c_orig
components/prboom-esp32-compat/include/: rgb_lcd.h
